src/components/widgets/HintBlock.scss
$CounterSize: 24px;

.component {
  .imageBlock {
    margin-bottom: 12px;
    border-radius: 6px;
    background-color: #F2F4FB;

    .image {
      max-width: 100%;
      max-height: 100%;
    }
  }
  .infoBlock {
    display: flex;
    flex-direction: row;
    width: 100%;
    .counterBlock {
      display: flex;
      justify-content: center;
      align-items: center;
      margin-right: 6px;
      .counter {
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 50%;
        background-color: #f2f4fb; // TODO, add variables
        color: #92979D; // TODO, add variables
        height: $CounterSize;
        width: $CounterSize;
        font-size: 14px;
      }
    }
    .textBlock {
      width: calc(100% - #{$CounterSize});
      .primaryText,
      .secondaryText {
        overflow-wrap: break-word;
        color: #38393D;
        font-size: 14px;
        line-height: 22px;
      }
      .primaryText {
        text-align: start;
      }
      .secondaryText {
        text-align: center;
        margin-top: 4px;
        padding: 4px;
        background-color: #F0F3F5; // TODO, add variables
        border-radius: 4px;
      }
    }
  }  
}

